--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
             <div class='card'>
                 <img src="./assets/Pic1.jpg" alt='' />
                 <div class='copy'>
-                    <h1>Lorem, ipsum.</h1>
+                    <h1>Grace</h1>
                 </div>
             </div>
             <div class='card'>
                 <img src="./assets/Pic3.jpg" alt='' />
                 <div class='copy'>
-                    <h1>Lorem, ipsum.</h1>
+                    <h1>Serenity</h1>
                 </div>
             </div>
             <div class='card'>
                 <img src="./assets/Pic4.jpg" alt='' />
                 <div class='copy'>
-                    <h1>Lorem, ipsum.</h1>
+                    <h1>Purity</h1>
                 </div>
             </div>
             <div class='card'>
                 <img src="./assets/Pic5.jpg" alt='' />
                 <div class='copy'>
-                    <h1>Lorem, ipsum.</h1>
+                    <h1>Tranquility</h1>
                 </div>
             </div>
             <div class='card'>
                 <img src="./assets/Pic2.jpg" alt='' />
                 <div class='copy'>
-                    <h1>Lorem, ipsum.</h1>
+                    <h1>Solitude</h1>
                 </div>
             </div>
         </div>
