--- a/index.html
+++ b/index.html
@@ -4,30 +4,34 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Alk Ees Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
     <nav>
         <div class='logo'>
-            <a href='#'>Noir Wood</a>
+            <a href='#'>Alk Ees</a>
         </div>
-        <div class='pages'>
+        <!-- <div class='pages'>
             <a href='#'>Films,</a>
             <a href='#'>Production,</a>
             <a href='#'>Info,</a>
             <a href='#'>Contact</a>
-        </div>
+        </div> -->
         <div class='shop'>
-            <a href='#'>Search</a>
+            <a href='#'>Films,</a>
+            <a href='#'>Production,</a>
+            <a href='#'>Info,</a>
+            <a href='#'>Contact</a>
+            <!-- <a href='#'>Search</a>
             <a href='#'>Account</a>
-            <a href='#'>Cart</a>
+            <a href='#'>Cart</a> -->
         </div>
     </nav>
     <footer>
-        <p>Showreel 2.0</p>
-        <p>2024 / 2025</p>
+        <p>Showreel</p>
+        <p>2024</p>
     </footer>
     <div class='container'>
         <div class='slider'>
